수민이 놀리기

--- a/index.html
+++ b/index.html
@@ -1,31 +1,23 @@
 <!doctype html>
-<html>
+<meta charset="utf-8">
 <head>
-  <title>프랑이</title>
-  <meta charset="utf-8">
+  수민이는 수민스럽다.
 </head>
 
+
+
 <body>
-  <h1><a herf="index.html">WEB</a></h1>
-  <ol>
-    <li><a herf="1.html">JavaScript</a></li>
-  <li><a herf="2.html">HTML</a></li>
-  <li><a herf="3.html">CSS</a></li>
-  </ol>
-  <h2><a href="https://www.w3.org/TR/html51/" target="_blank" title="html5 specification">HTML이 무엇인가?</a></h2>
+  <p>
+  <img src="수민이.jpg" width="50%">
+  <h1>보세요 수민스럽죠?</h1>
+  <h2>보세요 수민스럽죠?</h2>
+  <h3>보세요 수민스럽죠?</h3>
+  <h4>보세요 수민스럽죠?</h4>
+  <h5>보세요 수민스럽죠?</h5>
+  <h6>보세요 수민스럽죠?</h6>
+  </p>
 
-  <ol>
-    <li>;laksd</li>
-  <li>doifen'xlvkn</li>
-  <li>sldkneo</li>
-  </ol>
-
-  The twenty-eight elements<br> used on most pages, ordered by appearance frequency:
-  <p>HTML이 어떻게 보여질지는 장담할 수 없다.</p>
-  <p style="margin-top:20px;">크고 작은 화면과 브라우저 창의 크기 변화가 다른 결과를 보여줄 것이다.</p>
-  - HTML 코드 상에서 하나 이상의 공백이나 개행은 의미가 없다.
-  <img src="coding.jpg" width="100%">
-  모두 무시되고 하나의 공백 또는 개행만이 적용된다.
-  - Example
+  <br><u>수민이는 아주 수민스럽습니다.</u></br>
+  이 링크를 눌러보세요
+  <a href="https://www.google.com/search?biw=1920&bih=888&sxsrf=ALeKk03HhxUAdM8gN6Gu8Yr37iGnWKyAow%3A1592051036671&ei=XMXkXoW1KIn8wAOZ_rjoAg&q=%EC%88%98%EB%AF%BC%EC%8A%A4%EB%9F%BD%EB%8B%A4&oq=%EC%88%98%EB%AF%BC%EC%8A%A4%EB%9F%BD%EB%8B%A4&gs_lcp=CgZwc3ktYWIQAzoECCMQJzoFCAAQgwE6BQgAELEDOgIIADoHCCMQ6gIQJzoCCCZQiAhYzRhg3xpoBnAAeASAAckBiAGCFpIBBjAuMTcuMZgBAKABAaoBB2d3cy13aXqwAQo&sclient=psy-ab&ved=0ahUKEwiF04Sk5P7pAhUJPnAKHRk_Di0Q4dUDCAw&uact=5">https://www.google.com/search?biw=1920&bih=888&sxsrf=ALeKk03HhxUAdM8gN6Gu8Yr37iGnWKyAow%3A1592051036671&ei=XMXkXoW1KIn8wAOZ_rjoAg&q=%EC%88%98%EB%AF%BC%EC%8A%A4%EB%9F%BD%EB%8B%A4&oq=%EC%88%98%EB%AF%BC%EC%8A%A4%EB%9F%BD%EB%8B%A4&gs_lcp=CgZwc3ktYWIQAzoECCMQJzoFCAAQgwE6BQgAELEDOgIIADoHCCMQ6gIQJzoCCCZQiAhYzRhg3xpoBnAAeASAAckBiAGCFpIBBjAuMTcuMZgBAKABAaoBB2d3cy13aXqwAQo&sclient=psy-ab&ved=0ahUKEwiF04Sk5P7pAhUJPnAKHRk_Di0Q4dUDCAw&uact=5</a>
 </body>
-</html>
